# open_cups

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  lint_pr_title.yml  update-deps.yml  update_deps.yml
docs/: lessons-learned.md
src/lecture_feedback/: room.py  stats_tracker.py  types.py
src/open_cups/: __init__.py  app.py  application_state.py  clock.py  plots.py  room.py  session_state.py  state_provider.py  stats_tracker.py  thread_safe_dict.py  types.py  user_status.py
tests/: test_room.py  test_stats_tracker.py
tests/bdd/: fixture.py  test_distribution_history.py  test_helper.py  test_multiple_session.py  test_question_voting.py  test_room_cleanup.py
tests/bdd/features/: distribution_history.feature  room_cleanup.feature
tests/bdd/steps/: common_steps.py
tests/unit/: test_room.py  test_thread_safe_dict.py
